add section document

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Promeyza</title>
-    <link href="index.css" rel="stylesheet">
+    <link href="./index.css" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -47,6 +47,7 @@
             <img class="mb-3" src="images/Logo PM blanco.png" alt="Logo Promeyza" style="max-width: 70%;">
             <p class="fs-1 lead mt-3">La promesa es contigo</p>
             <a href="#hero" class="btn btn-light btn-lg mt-4 shadow-sm">Descubre más</a>
+            <a href="document.html" class="btn btn-primary btn-lg mt-4 shadow-sm">Firmar documento</a>
         </div>
     </header>
 
@@ -125,22 +126,23 @@
             <div class="col-md-3 mb-3">
                 <img src="images/mindfullnes.jpg" class="img-fluid rounded mb-3" alt="Función 1">
                 <h3 class="h5">Mindfulness</h3>
-                <p>Descripción breve de la primera función destacada de Promeyza.</p>
+                <p>Concetración plena en el aquí y el ahora, no es necesario irnos a la india para concentrarnos en el momento, te ayudamos a realizar pequeños ejercicios para que
+                    disfrutes del presente, que es nuestro regalo cada día a cada instante.</p>
             </div>
             <div class="col-md-3 mb-3">
                 <img src="images/aceites.jpg" class="img-fluid rounded mb-3" alt="Función 2">
                 <h3 class="h5">Aceites esenciales en rollon</h3>
-                <p>Descripción breve de la segunda función destacada de Promeyza.</p>
+                <p>Científicamente comprobado que ciertos aromas de los aceites esenciales nos ayudan a relajarmos y bajar la ansiedad particularmente la lavanda 🪻 tiene múltiples beneficios en nuestro sistema si respiramos profundamente este aroma.</p>
             </div>
             <div class="col-md-3 mb-3">
                 <img src="images/papeleria.jpg" class="img-fluid rounded mb-3" alt="Función 3">
                 <h3 class="h5">Papelería con sentido y valor</h3>
-                <p>Descripción breve de la tercera función destacada de Promeyza.</p>
+                <p>Regala a tus seres queridos libretas, agendas, o simples artículos con un sentido y un valor personalizado. Escríbenos  y te ayudamos a elegir el mejor regalo para esa persona tan especial.</p>
             </div>
             <div class="col-md-3 mb-3">
                 <img src="images/padres he hijos.jpg" class="img-fluid rounded mb-3" alt="Función 3">
                 <h3 class="h5">Taller de conexión padres/ hij@s</h3>
-                <p>Descripción breve de la tercera función destacada de Promeyza.</p>
+                <p>Hermoso taller que podrás disfrutar con tu hijo o hija de profunda conexión interior, solo debes estar presente y la magia nace, estaremos en un ambiente sano, de mucho respeto y amor para reencontrarse.</p>
             </div>
         </div>
     </section>
@@ -220,31 +222,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p><strong>📅 Sábado 03 de mayo | 🕛 12:00 hrs y 15:00 hrs</strong></p>
-                    <p>🔹 ¿Te gustaría aprender a manejar el estrés y fortalecer tu autoestima?<br>
-                       🔹 ¿Quieres descubrir el poder del sonido y las palabras positivas?</p>
-                    <p><strong>💡 ¡Este taller es para ti!</strong></p>
-                    <p><strong>Dividido en dos grupos:</strong><br>
-                       👦 Grupo 1: 8-10 años<br>
-                       🧒 Grupo 2: 11-13 años</p>
-                    <p><strong>💫 Temas que exploraremos:</strong></p>
-                    <ul>
-                        <li>✅ Mindfulness: Aprende a estar presente y enfocado.</li>
-                        <li>✅ Amor propio y valoración personal: Descubre tu valor y merecimiento.</li>
-                        <li>✅ Sonoterapia: Vive una experiencia única a través del sonido.</li>
-                        <li>✅ Frases de poder y motivacionales: Usa palabras para potenciar tu confianza.</li>
-                    </ul>
-                    <p><strong>🎯 Nuestros objetivos:</strong></p>
-                    <ul>
-                        <li>✨ Fortalecer la autoestima y la confianza.</li>
-                        <li>✨ Desarrollar herramientas para manejar el estrés y la ansiedad.</li>
-                        <li>✨ Fomentar la empatía y la conexión con los demás.</li>
-                        <li>✨ Proporcionar recursos para el éxito y la felicidad.</li>
-                    </ul>
-                    <p>🚀 <strong>¡Inscripciones abiertas!</strong> No te quedes fuera de esta experiencia transformadora.<br>
-                       📩 Contáctanos en <a href="mailto:promeyza@gmail.com">promeyza@gmail.com</a> o ‪<a href="tel:+56965780608">+56965780608</a> para más info y reservar tu cupo.<br>
-                       📍 Ubicación: el panul 6770, La Florida.</p>
-                    <p><strong>🌟 ¡Te esperamos para compartir juntos este increíble viaje de crecimiento!</strong></p>
+                    <img src="./images/Anuncio1.jpg" alt="anuncio" id="imganuncio">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-success" data-bs-dismiss="modal">Cerrar</button>
