--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
             <img class="mb-3" src="images/Logo PM blanco.png" alt="Logo Promeyza" style="max-width: 70%;">
             <p class="fs-1 lead mt-3">La promesa es contigo</p>
             <a href="#hero" class="btn btn-light btn-lg mt-4 shadow-sm">Descubre más</a>
-            <a href="document.html" class="btn btn-primary btn-lg mt-4 shadow-sm">Firmar documento</a>
+            <a href="document.html" class="btn btn-primary btn-lg mt-4 shadow-sm">Ver Programa</a>
         </div>
     </header>
 
@@ -181,9 +181,11 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="p-4 bg-white rounded shadow-sm" style="border-left: 5px solid #d81b60;">
-                        <p>
-                            La visión de Promeyza es crear una comunidad de apoyo y contención que permita a los jóvenes, adolescentes y padres conectarse con su poder interior y alcanzar su máximo potencial. La organización busca ser un refugio y un centro de ayuda para aquellos que necesitan orientación y apoyo.
-                        </p>
+                        <p><strong>Amor y compasión:</strong><br> La organización se centra en proporcionar un espacio de amor y compasión para aquellos que necesitan ayuda y orientación.<br><br><br></p>
+                        <p><strong>Conexión y contención:</strong><br> Promeyza busca fortalecer los lazos y la conexión interior de los jóvenes y adolescentes, y brindar un espacio de contención y apoyo para aquellos que necesitan ayuda.</p>
+                        <p><strong>Crecimiento y desarrollo:</strong><br> La organización se centra en proporcionar herramientas y recursos para que los jóvenes y adolescentes puedan crecer y desarrollarse de manera óptima.</p>
+                        <p><strong>Comunidad y apoyo:</strong><br> Promeyza busca crear una comunidad de apoyo y contención que permita a los jóvenes, adolescentes y padres conectarse con otros y encontrar ayuda y orientación.</p>
+                        <p><strong>Paz, tranquilidad y armonía:</strong><br> La organización busca proporcionar un espacio de paz, tranquilidad y armonía para aquellos que necesitan escapar del estrés y la presión de la vida diaria.</p>
                     </div>
                 </div>
             </div>
