--- a/public/document.html
+++ b/public/document.html
@@ -3,40 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Programa</title>
     <link href="./document.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <a href="index.html"><img src="./images/Logo PM blanco.png"></a>
     </header>
     <main>
-        <h1>Documento</h1>
-        <section id="firmas">
-            <h2>Firmas realizadas</h2>
-            <table class="table table-striped table-hover table-dark">
-                <thead>
-                    <tr>
-                        <th>Nombre</th>
-                        <th>Email</th>
-                        <th>Fecha</th>
-                    </tr>
-                </thead>
-                <tbody id="lista-firmas">
-                    <!-- Aquí se generarán las firmas -->
-                </tbody>
-            </table>
-        </section>
+        <section id="intro">
+            <h1>Programa</h1>
+            <p>Para leer el programa por favor descargalo en el siguiente link:</p>
+            <p class="link"><a href="./docs/Programa_Promeyza.pdf">Descargalo aquí</a></p>
+        </section>  
         <section id="formulario">
-            <p>Si estás de acuerdo con este documento por favor escribe tu nombre y tu correo electronico como muestra de apoyo.</p>
+            <p>Muestra tu apoyo firmando con tu nombre y tu correo electrónico en el formulario</p>
             <form>
                 <input type="text" id="nombre" placeholder="Nombre" required>
                 <input type="text" id="email" placeholder="Email" required>
                 <button type="submit">Firmar!</button>
             </form>
         </section>
+        <section id="firmas">
+            <h2><em>Firmado por </em><span id="sum-firmas"></span> <em>personas</em> &#129392; </h2>
+        </section>
     </main>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 Promeyza. Todos los derechos reservados.</p>
+    </footer>
     <script type="module" src="./app.js"></script>
 </body>
 </html>
