unificada document y add mision-vision

--- a/public/document.html
+++ b/public/document.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a id="logo" href="index.html"><img src="./images/Logo PM blanco.png"></a>
+        <a id="logo" href="./index.html"><img src="./images/Logo PM blanco.png"></a>
     </header>
     <!-- Navbar -->
     <nav>
