--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
             <p>
                 Promeyza es mi respuesta a la necesidad de apoyo y contención que vi en mi propia vida y en la de aquellos que me rodean. Como madre y como persona que ha enfrentado desafíos, sé que es fundamental tener un espacio donde puedas encontrar ayuda y orientación. Promeyza es ese espacio. Nuestro objetivo es brindar apoyo y contención a jóvenes, adolescentes y padres que buscan fortalecer sus lazos y conexión interior, aprendiendo y compartiendo diferentes experiencias para colaborarnos entre todos, vamos aprender juntos.
             </p>
-            <a href="./document.html" id="ver-programa">Ver Programa</a>
+            <a href="#document" id="ver-programa">Ver Programa</a>
         </article>
         <img src="./images/abrazo.jpg" alt="personas abrazandose">
     </section>
@@ -83,17 +83,29 @@
     
 
     <!-- Valores Section -->
-    <!-- <section id="values">
-        <h2>Nuestros Valores</h2>
+    <section id="values">
+        <h2 class="values-title">Nues tros <br> Valo res</h2>
         <article>
-            <p><strong>Amor y compasión:</strong></p>
-            <p> La organización se centra en proporcionar un espacio de amor y compasión para aquellos que necesitan ayuda y orientación.<br><br><br></p>
-            <p><strong>Conexión y contención:</strong><br> Promeyza busca fortalecer los lazos y la conexión interior de los jóvenes y adolescentes, y brindar un espacio de contención y apoyo para aquellos que necesitan ayuda.</p>
-            <p><strong>Crecimiento y desarrollo:</strong><br> La organización se centra en proporcionar herramientas y recursos para que los jóvenes y adolescentes puedan crecer y desarrollarse de manera óptima.</p>
-            <p><strong>Comunidad y apoyo:</strong><br> Promeyza busca crear una comunidad de apoyo y contención que permita a los jóvenes, adolescentes y padres conectarse con otros y encontrar ayuda y orientación.</p>
-            <p><strong>Paz, tranquilidad y armonía:</strong><br> La organización busca proporcionar un espacio de paz, tranquilidad y armonía para aquellos que necesitan escapar del estrés y la presión de la vida diaria.</p>
+            <h2>Amor y compasión</h2>
+            <p>La organización se centra en proporcionar un espacio de amor y compasión para aquellos que necesitan ayuda y orientación.</p>
         </article>
-    </section> -->
+        <article>
+            <h2>Conexión y contención</h2>
+            <p>Promeyza busca fortalecer los lazos y la conexión interior de los jóvenes y adolescentes, y brindar un espacio de contención y apoyo para aquellos que necesitan ayuda.</p>
+        </article>
+        <article>
+            <h2>Crecimiento y desarrollo</h2>
+            <p>La organización se centra en proporcionar herramientas y recursos para que los jóvenes y adolescentes puedan crecer y desarrollarse de manera óptima.</p>
+        </article>
+        <article>
+            <h2>Comunidad y apoyo</h2>
+            <p>Promeyza busca crear una comunidad de apoyo y contención que permita a los jóvenes, adolescentes y padres conectarse con otros y encontrar ayuda y orientación.</p>
+        </article>
+        <article>
+            <h2>Paz, tranquilidad y armonía</h2>
+            <p>La organización busca proporcionar un espacio de paz, tranquilidad y armonía para aquellos que necesitan escapar del estrés y la presión de la vida diaria.</p>
+        </article>
+    </section>
 
     <!-- Mission and Vision Section -->
     <section id="mision-vision">
@@ -162,7 +174,10 @@
             <img src="images/Anuncio1.jpg" alt="Modal Image">
         </div>
     </div>
-    <script type="module" src="./scripts/modal.js"></script>
+    <!-- <script type="module" src="./scripts/modal.js"></script> -->
     <script type="module" src="./app.js"></script>
+    <script type="module" src="./scripts/carousel.js"></script>
+    <script type="module" src="./scripts/smoothScroll.js"></script>
+    
 </body>
 </html>
